-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
6d13e9f29597e0d557857e3f80173faba5368424 346d42b3fe8677078216131df2b195738861761a b97b090d620a23736d4ab5535000ce499509cac5
Nokia Legal have requested that Qt code stops using the name "trolltech". This name is still used in code related to the resource system – search for ":/trolltech/" in cpp files and "<qresource prefix=\"/trolltech/" in .qrc files.
- is required for
-
QTBUG-25005 Critical issues for Qt5 Beta 1
-
- Closed
-
| For Gerrit Dashboard: QTBUG-23272 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 21287,2 | Use "qt-project.org" instead of "trolltech" in the resource system | master | qt/qtqa | Status: MERGED | +2 | 0 |
| 21288,1 | Use "qt" instead of "trolltech" in the resource system | master | qt/qttools | Status: ABANDONED | 0 | 0 |
| 21289,2 | Use "qt" instead of "trolltech" in the resource system | master | qt/qtbase | Status: ABANDONED | -2 | 0 |
| 21381,1 | Use "qt-project.org" instead of "trolltech" in the resource system | api_changes | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 21386,1 | Use "qt-project.org" instead of "trolltech" in the resource system | master | qt/qttools | Status: MERGED | +2 | 0 |