Use "qt-project.org" instead of "trolltech" in the resource system

Task-number: QTBUG-23272

Change-Id: Idcdb9620910577b3c0fc9a792a0446665bd2eab6
Reviewed-by: Lars Knoll <lars.knoll@nokia.com>

cregit: 6d13e9f29597e0d557857e3f80173faba5368424 https://github.com/qt/qtbase/commit/6d13e9f29597e0d557857e3f80173faba5368424