tests/auto/widgets/kernel/qicon/tst_qicon.cpp
@@ -2596,7 +2596,7 @@ name|addFile
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-16.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-16.png"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2606,7 +2606,7 @@ name|addFile
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-32.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-32.png"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2616,7 +2616,7 @@ name|addFile
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-128.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-128.png"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2626,7 +2626,7 @@ name|addFile
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-save-16.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-save-16.png"
 argument_list|)
 argument_list|,
 name|QSize
@@ -2643,7 +2643,7 @@ name|addFile
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-save-32.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-save-32.png"
 argument_list|)
 argument_list|,
 name|QSize
@@ -2660,7 +2660,7 @@ name|addFile
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-save-128.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-save-128.png"
 argument_list|)
 argument_list|,
 name|QSize
@@ -2694,7 +2694,7 @@ name|QPixmap
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-16.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-16.png"
 argument_list|)
 argument_list|)
 operator|.
@@ -2722,7 +2722,7 @@ name|QPixmap
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-32.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-32.png"
 argument_list|)
 argument_list|)
 operator|.
@@ -2750,7 +2750,7 @@ name|QPixmap
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-128.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-128.png"
 argument_list|)
 argument_list|)
 operator|.
@@ -2778,7 +2778,7 @@ name|QPixmap
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-save-16.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-save-16.png"
 argument_list|)
 argument_list|)
 operator|.
@@ -2806,7 +2806,7 @@ name|QPixmap
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-save-32.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-save-32.png"
 argument_list|)
 argument_list|)
 operator|.
@@ -2834,7 +2834,7 @@ name|QPixmap
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-save-128.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-save-128.png"
 argument_list|)
 argument_list|)
 operator|.
@@ -2865,7 +2865,7 @@ name|QPixmap
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-16.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-16.png"
 argument_list|)
 argument_list|)
 operator|.
@@ -2893,7 +2893,7 @@ name|QPixmap
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-save-16.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-save-16.png"
 argument_list|)
 argument_list|)
 operator|.
@@ -3204,7 +3204,7 @@ name|icon
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-16.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-16.png"
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -3257,7 +3257,7 @@ name|file
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-16.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-16.png"
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -4302,7 +4302,7 @@ name|addFile
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-16.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-16.png"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -4344,7 +4344,7 @@ name|addFile
 argument_list|(
 name|QLatin1String
 argument_list|(
-literal|":/trolltech/styles/commonstyle/images/standardbutton-open-16.png"
+literal|":/qt-project.org/styles/commonstyle/images/standardbutton-open-16.png"
 argument_list|)
 argument_list|)
 expr_stmt|;
